--- a/create_instance_terraform_templates.yml
+++ b/create_instance_terraform_templates.yml
@@ -2,7 +2,7 @@
 # Name:		create_instance_terraform_templates.yml
 # Author:	Rodney Marable <rodney.marable@gmail.com>
 # Created On:	April 20, 2019
-# Last Changed:	June 14, 2019
+# Last Changed:	July 3, 2019
 # Purpose:	Ansible playbook for new EC2 instance Terraform build templates
 ################################################################################
 
@@ -25,7 +25,7 @@
         state: directory
         mode: 0755
 
-    - name: Deploy the Terraform EC2 instance templates
+    - name: Deploy the standard Terraform EC2 instance templates
       template:
         src: "{{ item.src }}"
         dest: "{{ item.dest }}"
@@ -37,9 +37,14 @@
         - { src: '{{ kill_instance_src }}', dest: '{{ instance_data_dir }}/{{ kill_instance_script }}' }
         - { src: '{{ provider_tf_src }}', dest: '{{ instance_data_dir }}/{{ provider_tf_dest }}' }
         - { src: '{{ tf_ec2_instance_src }}', dest: '{{ instance_data_dir }}/{{ tf_ec2_instance_dest }}' }
+        - { src: '{{ build_ami_src }}', dest: '{{ instance_data_dir }}/{{ build_ami_script }}' }
+        - { src: '{{ custom_user_script_src }}', dest: '{{ instance_data_dir }}/{{ custom_user_script }}' }
 
-    - name: Symlink the kill_instance script into the main src_tree
+    - name: Symlink the kill_instance and build-ami scripts into the main src_tree
       file:
-        src: "{{ instance_data_dir }}/{{ kill_instance_script }}"
-        path: "{{ local_workingdir }}/kill-instance.{{ instance_name }}.sh"
+        src: "{{ item.src }}"
+        path: "{{ item.path }}"
         state: link
+      with_items:
+        - { src: '{{ instance_data_dir }}/{{ kill_instance_script }}', path: '{{ local_workingdir }}/kill-instance.{{ instance_name }}.sh' }
+        - { src: '{{ instance_data_dir }}/{{ build_ami_script }}', path: '{{ local_workingdir }}/build-ami.{{ instance_name }}.sh' }
