Modified the dockerfile to use Amazon Linux instead of Alpine Linux.

--- a/dockerfile_alpine
+++ b/dockerfile_alpine
@@ -1,9 +1,10 @@
 ################################################################################
 # Name:		dockerfile
-# Author:	Rodney Marable <rodney.marable@gmail.com>
-# Created On:	August 8, 2019
-# Last Changed:	August 8, 2019
-# Purpose:	Run Ec2InstanceMaker from an Amazon Linux Docker container
+# Author:	Chris Mitchell <chris@ginkgobioworks.com>
+# Modified By:	Rodney Marable <rodney.marable@gmail.com>
+# Created On:	July 29, 2019
+# Last Changed:	July 30, 2019
+# Purpose:	Run Ec2InstanceMaker from an Alpine Linux Docker container
 ################################################################################
 #
 # Usage:
@@ -38,9 +39,9 @@
 ################      Do *NOT* change anything below this comment!    ##########
 ################################################################################
 
-# Build the container from the official Amazon Linux Docker image.
+# Build the container from the official Docker Python-3.7 image.
 
-FROM amazonlinux:latest
+FROM python:3.7-alpine
 
 # Set the PATH and APP_HOME environment variables.
 
@@ -58,25 +59,20 @@ COPY templates $APP_HOME/templates
 
 # Install the packages and Python libraries required by Ec2InstanceMaker.
 
-RUN yum update -y
-RUN yum install -y \
+RUN apk update -q && apk add \
   autoconf \
   automake \
   g++ \
   gcc \
   git \
   jq \
-  libc-devel \
-  libffi-devel \
+  libc-dev \
+  libffi-dev \
   libtool \
   linux-headers \
   make \
   openssh \
-  openssl-devel \
-  python3 \
-  python3-devel \
-  python3-pip
-
+  openssl-dev 
 RUN pip3 install -r requirements.txt
 
 # Install Terraform.
@@ -87,13 +83,10 @@ RUN unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 RUN cp terraform /usr/local/bin && rm terraform_*
 RUN chmod 0755 /usr/local/bin/terraform
 
-# To use Bash interactively (which is recommended), uncomment ENTRYPOINT above
-# and build the container as follows:
-#
-# $ docker build -t ec2instancemaker .
-# $ docker run -it --entrypoint=/bin/bash ec2instancemaker:latest -i
-# # pwd
-# /Ec2InstanceMaker
-# ./make-instance.py -h
+# Set the default entrypoint.
+# See the README, INSTALL, and EXAMPLE_USE_CASES documents for additional user
+# guidance on interacting with Ec2InstanceMaker interactively.
+# Alternatively, override ENTRYPOINT to run the companion scripts to access
+# the instance(s) over SSH or to delete them.
 
 ENTRYPOINT ["make-instance.py"]
